@@ -275,6 +275,12 @@ Parameter Chart of MIDIbox SID V2 --- Lead Engine
   83 | 53h | Voice 3 Pitch Bender                         |  0-255: val |    0
 -----+-----+----------------------------------------------+-------------+------
 -----+-----+----------------------------------------------+-------------+------
+  84 | 54h | Detune Node                                  |    0-2: val |    0
+     |     |            0: Normal (Legacy mode)           |             |
+     |     |            1: SuperSaw -                     |             |
+     |     |            2: SuperSaw +                     |             |
+-----+-----+----------------------------------------------+-------------+------
+-----+-----+----------------------------------------------+-------------+------
 -----+-----+----------------------------------------------+-------------+------
 -----+-----+----------------------------------------------+-------------+------
   96 | 60h | MOD1 Depth                                   |  0-127: neg |  128
@@ -959,6 +965,11 @@ Parameter Chart of MIDIbox SID V2 --- Bassline Engine
   82 | 52h | Bassline 1 Pitch Bender                      |  0-255: val |    0
   83 | 53h | Bassline 2 Pitch Bender                      |  0-255: val |    0
 -----+-----+----------------------------------------------+-------------+------
+-----+-----+----------------------------------------------+-------------+------
+  84 | 54h | Detune Mode                                  |    0-2: val |    0
+     |     |            0: Normal (Legacy mode)           |             |
+     |     |            1: SuperSaw -                     |             |
+     |     |            2: SuperSaw +                     |             |
 -----+-----+----------------------------------------------+-------------+------
 -----+-----+----------------------------------------------+-------------+------
   96 | 60h | Bassline 1+2 Filter CutOff                   |  0-255: val |    0
