@@ -398,6 +398,7 @@ CS_MENU_TABLE_L_OSC
 	CS_MENU_ENTRY	SID_Ix_Vx_FLAGS1,	    "PMd", 0x002, PRINT_Vx_PMD,     EXEC_TOGPAR,     R2PP2R_Vx_PMD
 	CS_MENU_ENTRY	SID_Ix_Vx_FLAGS1,	    "GSA", 0x001, PRINT_Vx_GSA,     EXEC_TOGPAR,     R2PP2R_Vx_GSA
 	CS_MENU_ENTRY	SID_Ix_L_OSC_DETUNE,        "Det", 0x0ff, PRINT_DEC8,       EXEC_SELPAR,     R2PP2R_PAR8
+	CS_MENU_ENTRY 	SID_Ix_L_OSC_DTM,	    "DtM", 0x002, PRINT_DTM,	    EXEC_TOGPAR,     R2PP2R_PAR8
 #if DEFAULT_ENABLE_SWINSID
 	CS_MENU_ENTRY	SID_Ix_Vx_SWINSID_MODE,     "SwM", 0x0ff, PRINT_Vx_HEX8,    EXEC_SELPAR,     R2PP2R_Vx
 	CS_MENU_ENTRY	SID_Ix_Vx_SWINSID_PHASE,    "SwP", 0x0ff, PRINT_Vx_HEX8,    EXEC_SELPAR,     R2PP2R_Vx
@@ -505,6 +506,7 @@ CS_MENU_TABLE_B_O23
 	CS_MENU_ENTRY	SID_Ix_B_V3_STATIC_NOTE,    "Nt3", 0x07f, PRINT_Vx_NOTE,    EXEC_SELPAR,     R2PP2R_Vx
 	CS_MENU_ENTRY	SID_Ix_B_OSC_PHASE,         "Phs", 0x0ff, PRINT_DEC8,       EXEC_SELPAR,     R2PP2R_PAR8
 	CS_MENU_ENTRY	SID_Ix_B_OSC_DETUNE,        "Det", 0x0ff, PRINT_DEC8,       EXEC_SELPAR,     R2PP2R_PAR8
+	CS_MENU_ENTRY 	SID_Ix_L_OSC_DTM,	    "DtM", 0x002, PRINT_DTM,	    EXEC_TOGPAR,     R2PP2R_PAR8
 CS_MENU_TABLE_B_O23_End
 
 ; ==========================================================================
