@@ -3,8 +3,9 @@ $Id$
 MIDIboxSID V2.044
 ~~~~~~~~~~~~~~~~~
 
-   o envelopes are now released properly when a note is played via the SysEx editor
-     (or with the PLAY button)
+   o This version got an improved rotary encoder handling.
+     Please update to MIOS V1.9h before uploading the application, otherwise the improvements
+     won't be effective.
 
    o swapped behaviour of ENC speed control again, so that encoders are at fast speed
      by default, and slow if SHIFT button pressed.
@@ -13,6 +14,15 @@ MIDIboxSID V2.044
 
    o implemented special encoder testmode which can be enabled with
      DEFAULT_TESTMODE_ENC_SPEED in the setup_*.asm file
+
+   o envelopes are now released properly when a note is played via the SysEx editor
+     (or with the PLAY button)
+
+   o added new "SuperSaw" detune mode which has been created by Lis0r.
+     In distance to the normal (legacy) mode, results are much better especially on
+     higher detune values!
+     The detune mode (DtM) can be selected in the OSC page for lead engine patches, and
+     in the O23 page for bassline patches.
 
 
 MIDIboxSID V2.043
